add update_rules and fix some bugs
